; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/apitests/win32nt/ntuser/extr_NtUserSystemParametersInfo.c_Test_SPI_SETBORDER.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/apitests/win32nt/ntuser/extr_NtUserSystemParametersInfo.c_Test_SPI_SETBORDER.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SPI_GETBORDER = common dso_local global i32 0, align 4
@SPI_SETBORDER = common dso_local global i32 0, align 4
@SPIF_UPDATEINIFILE = common dso_local global i32 0, align 4
@SM_CXBORDER = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Test_SPI_SETBORDER() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  store i32 0, i32* %2, align 4
  %3 = load i32, i32* @SPI_GETBORDER, align 4
  %4 = call i32 @NtUserSystemParametersInfo(i32 %3, i32 0, i32* %1, i32 0)
  %5 = load i32, i32* @SPI_SETBORDER, align 4
  %6 = load i32, i32* @SPIF_UPDATEINIFILE, align 4
  %7 = call i32 @NtUserSystemParametersInfo(i32 %5, i32 0, i32* null, i32 %6)
  %8 = load i32, i32* @SPI_GETBORDER, align 4
  %9 = call i32 @NtUserSystemParametersInfo(i32 %8, i32 0, i32* %2, i32 0)
  %10 = load i32, i32* %2, align 4
  %11 = icmp eq i32 %10, 1
  %12 = zext i1 %11 to i32
  %13 = call i32 @TEST(i32 %12)
  %14 = load i32, i32* @SM_CXBORDER, align 4
  %15 = call i32 @GetSystemMetrics(i32 %14)
  %16 = icmp eq i32 %15, 1
  %17 = zext i1 %16 to i32
  %18 = call i32 @TEST(i32 %17)
  %19 = load i32, i32* @SPI_SETBORDER, align 4
  %20 = load i32, i32* @SPIF_UPDATEINIFILE, align 4
  %21 = call i32 @NtUserSystemParametersInfo(i32 %19, i32 1, i32* null, i32 %20)
  %22 = load i32, i32* @SPI_GETBORDER, align 4
  %23 = call i32 @NtUserSystemParametersInfo(i32 %22, i32 0, i32* %2, i32 0)
  %24 = load i32, i32* %2, align 4
  %25 = icmp eq i32 %24, 1
  %26 = zext i1 %25 to i32
  %27 = call i32 @TEST(i32 %26)
  %28 = load i32, i32* @SPI_SETBORDER, align 4
  %29 = load i32, i32* @SPIF_UPDATEINIFILE, align 4
  %30 = call i32 @NtUserSystemParametersInfo(i32 %28, i32 2, i32* null, i32 %29)
  %31 = load i32, i32* @SPI_GETBORDER, align 4
  %32 = call i32 @NtUserSystemParametersInfo(i32 %31, i32 0, i32* %2, i32 0)
  %33 = load i32, i32* %2, align 4
  %34 = icmp eq i32 %33, 2
  %35 = zext i1 %34 to i32
  %36 = call i32 @TEST(i32 %35)
  %37 = load i32, i32* @SM_CXBORDER, align 4
  %38 = call i32 @GetSystemMetrics(i32 %37)
  %39 = icmp eq i32 %38, 1
  %40 = zext i1 %39 to i32
  %41 = call i32 @TEST(i32 %40)
  %42 = load i32, i32* @SPI_SETBORDER, align 4
  %43 = load i32, i32* %1, align 4
  %44 = load i32, i32* @SPIF_UPDATEINIFILE, align 4
  %45 = call i32 @NtUserSystemParametersInfo(i32 %42, i32 %43, i32* null, i32 %44)
  ret void
}

declare dso_local i32 @NtUserSystemParametersInfo(i32, i32, i32*, i32) #1

declare dso_local i32 @TEST(i32) #1

declare dso_local i32 @GetSystemMetrics(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
